<resources>
    <string name="app_name">QuantityRetainer</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_retention_name">Retention name</string>
    <string name="total_count">Total count:</string>
    <string name="add_count_label">Count to add</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="statistics">Statistic</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="new_name_hint">New name</string>
    <string name="confirm_delete">Delete selected element?</string>
    <string name="show_all_retentions">Show all retentions</string>
    <string name="enter_add_on_tap">Add count:</string>
    <string name="increment_count_label">Count to add by tap</string>
    <string name="tap_to_add">Tap to add</string>
    <string name="inсrement_channel_name">Add new round</string>
    <string name="notification_title">Total count:</string>
    <string name="statistic_days">By days</string>
    <string name="statistic_months">By months</string>

</resources>
