<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecordFragment">

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/total_count"
            style="@style/RecordText"/>

        <TextView
            android:id="@+id/total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/total_text"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="111111"
            style="@style/RecordText"/>

        <EditText
            android:id="@+id/add_count_input"
            style="@style/RecordText"
            android:layout_width="@dimen/count_in_width"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/add_count_label"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintBaseline_toBaselineOf="@id/btn_add"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_text"
            tools:text="500" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/add_count_input"
            app:layout_constraintTop_toBottomOf="@id/total_text"
            style="@style/RecordText"
            android:text="@string/add"
            tools:text="ADD"/>

        <View
            android:id="@+id/rec_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add"
            android:layout_marginTop="16dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/count_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rec_divider"
            android:layout_marginBottom="-1dp"/>

        <View
            android:id="@+id/rec_divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/count_recycler"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="false"
        app:behavior_peekHeight="40dp" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/primaryLightColor"
            android:visibility="visible"
            android:orientation="vertical">

            <View
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_expand_less_black_24dp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:background="@color/primaryLightColor">

                <android.support.constraint.Guideline
                    android:id="@+id/horizontal_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

                <TextView
                    android:id="@+id/increment_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="parent"
                    android:text="@string/enter_add_on_tap"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/horizontal_middle"
                    app:layout_constraintRight_toLeftOf="@id/horizontal_middle"
                    app:layout_constraintBaseline_toBaselineOf="@id/increment_count_input"
                    android:layout_marginBottom="@dimen/margin_text_bottom_shit"
                    android:layout_marginStart="@dimen/margin_text_bottom_shit"
                    android:layout_marginLeft="@dimen/margin_text_bottom_shit"
                    android:layout_marginEnd="@dimen/margin_text_bottom_shit"
                    android:layout_marginRight="@dimen/margin_text_bottom_shit"/>

                <EditText
                    android:id="@+id/increment_count_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_text_bottom_shit"
                    android:layout_marginTop="40dp"
                    android:width="100dp"
                    android:hint="@string/increment_count_label"
                    android:inputType="number"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toRightOf="@id/horizontal_middle"
                    app:layout_constraintStart_toEndOf="@id/horizontal_middle"
                    app:layout_constraintTop_toBottomOf="parent"
                    android:importantForAutofill="no" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layout_constraintTop_toBottomOf="@id/increment_count_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="0dp">

                    <TextView
                        android:id="@+id/tap_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tap_to_add"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:background="@color/secondaryLightColor"
                        />

                </android.support.v7.widget.CardView>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>